# KeySave

./: Readme.md
cxx-wx-app-password-manager/: CMakeLists.txt
cxx-wx-app-password-manager/openssl-1.1.1k/: Makefile  configdata.pm  libcrypto.pc  libcrypto.so.1.1  libssl.so.1.1  pod2htmd.tmp
cxx-wx-app-password-manager/openssl-1.1.1k/apps/: openssl
cxx-wx-app-password-manager/openssl-1.1.1k/crypto/: buildinf.h
cxx-wx-app-password-manager/openssl-1.1.1k/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cms-test  conf-test  crl-test  ct-test  server-test  x509-test
cxx-wx-app-password-manager/openssl-1.1.1k/test/: aborttest  afalgtest  asn1_decode_test  asn1_encode_test  asn1_internal_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_callback_test  bio_enc_test  bio_memleak_test  bioprinttest  bntest  buildtest_c_aes  buildtest_c_asn1  buildtest_c_asn1t  buildtest_c_async  buildtest_c_bio  buildtest_c_blowfish  buildtest_c_bn  buildtest_c_buffer  buildtest_c_camellia  buildtest_c_cast  buildtest_c_cmac  buildtest_c_cms  buildtest_c_comp  buildtest_c_conf  buildtest_c_conf_api  buildtest_c_crypto  buildtest_c_ct  buildtest_c_des  buildtest_c_dh  buildtest_c_dsa  buildtest_c_dtls1  buildtest_c_e_os2  buildtest_c_ebcdic  buildtest_c_ec  (+142 more)
cxx-wx-app-password-manager/res/: words.txt
cxx-wx-app-password-manager/src/: jnicloudelib.cpp  jnicloudelib.h  mainframe.cpp  mainframe.h  xmlfile.cpp  xmlfile.h
java-lib-password-manager/: pom.xml
java-lib-password-manager/src/: CloudApp.java
kotlin-android-app-password-manager/: build.gradle.kts  local.properties
kotlin-android-app-password-manager/app/: build.gradle.kts
kotlin-android-app-password-manager/resources/: keys_encrypt_upload.xml
resources/: token
